<resources>
    <string name="app_name">Lite++</string>
    <string name="about">Lite++ By Farhan Ali</string>
    <string name="home">Home</string>
    <string name="refresh">Refresh</string>
    <string name="extract_cookies">Extract Cookies</string>
    <string name="edit_cookies">Edit Cookies</string>
    <string name="desktop_mode">Desktop Mode</string>
    <string name="dev_name">Farhan Ali</string>
    <string name="dev_email">i.farhanali.dev@gmail.com</string>
    <string name="dev_yt">https://youtube.com/@TheAnonymous_ofc</string>
    <string name="dev_github">https://www.github.com/farhaanaliii/Lite/</string>
    <string name="dev_fb">https://www.facebook.com/i.farhanali.dev</string>
    <string name="current_version">1.1.0</string>
    <string name="menu_about">About</string>
    <string name="menu_current_url">See Current URL</string>
    <string name="no_internet">No Internet connection!</string>

    <string name="preference_title_developer">Developer</string>
    <string name="preference_summary_developer">Creator and Developer of Lite++</string>
    <string name="preference_title_about_app">About App</string>
    <string name="preference_title_contact">Contact</string>
    <string name="preference_title_version">Version</string>
    <string name="preference_title_app_status">App Status</string>
    <string name="preference_title_bugs_features">Bugs and Features</string>
    <string name="preference_title_facebook">Facebook</string>
    <string name="preference_summary_facebook">Contact me on Facebook</string>
    <string name="preference_title_github">GitHub</string>
    <string name="preference_summary_github">Star on GitHub</string>
    <string name="preference_title_youtube">YouTube</string>
    <string name="preference_summary_youtube">Subscribe to my channel</string>
    <string name="preference_title_email">Email</string>
    <string name="app_status">This app is currently under development</string>
    <string name="bugs_and_features">Report bugs or suggest features</string>
    <string name="check_for_updates">Check for updates</string>
    <string name="settings">Settings</string>
    <string name="select_file">Select File</string>

    <!-- Settings Preferences -->
    <string name="pref_category_general">General Settings</string>
    <string name="pref_theme">App Theme</string>
    <string name="pref_theme_summary">Choose between System, Light, or Dark</string>
    <string name="pref_custom_user_agent">Custom User-Agent</string>
    <string name="pref_custom_user_agent_summary">Set a custom User-Agent string for requests</string>
    <string name="pref_dialog_title_user_agent">Enter User-Agent</string>
    <string name="pref_javascript">Enable JavaScript</string>
    <string name="pref_javascript_summary">Allow JavaScript execution in web content</string>

    <string name="pref_category_storage">Storage &amp; Performance</string>
    <string name="pref_clear_cache">Clear Cache</string>
    <string name="pref_clear_cache_summary">Delete cached data to free up space</string>
    <string name="pref_clear_storage">Clear Storage</string>
    <string name="pref_clear_storage_summary">Reset all app data and settings</string>

    <string name="pref_category_advanced">Advanced Settings</string>
    <string name="pref_reset">Reset to Default</string>
    <string name="pref_reset_summary">Restore all settings to default values</string>

    <string-array name="cookie_formats">
        <item>String</item>
        <item>Netscape</item>
        <item>JSON Array</item>
        <item>JSON Dictionary</item>
    </string-array>

    <string-array name="theme_entries">
        <item>System Default</item>
        <item>Light</item>
        <item>Dark</item>
    </string-array>
    
    <string-array name="theme_values">
        <item>system</item>
        <item>light</item>
        <item>dark</item>
    </string-array>

    <string name="cookie_format">Cookie Format</string>
    <string name="invalid_cookie_format">Invalid cookie format. Please check your input.</string>

    <!-- Dialogs -->
    <string name="cookies">Cookies</string>
    <string name="copy_to_clipboard">Copy to Clipboard</string>
    <string name="copied">Copied!</string>
    <string name="save_cookies">Save Cookies</string>
    <string name="cookies_empty">Cookies cannot be empty!</string>
    <string name="cookies_saved">Cookies Saved!</string>
    <string name="current_url">Current URL</string>
    <string name="hint_string_format">name1=value1; name2=value2</string>
    <string name="hint_netscape_format">Netscape format</string>
    <string name="hint_json_array_format">JSON Array format</string>
    <string name="hint_json_dict_format">JSON Dictionary format</string>

    <!-- Update -->
    <string name="update_available">Update Available</string>
    <string name="version_available">Version %s is available!</string>
    <string name="whats_new">What\'s new:</string>
    <string name="download_update_prompt">Would you like to download the update?</string>
    <string name="download">Download</string>
    <string name="later">Later</string>
    <string name="new_version_available">A new version is available!</string>
    <string name="latest_version">You are using the latest version.</string>
    <string name="checking_updates">Checking for updates…</string>
    <string name="update_check_failed">Failed to check for updates.</string>

    <!-- Settings toasts -->
    <string name="cache_cleared">WebView cache cleared!</string>
    <string name="storage_cleared">WebView storage cleared!</string>
    <string name="settings_reset">Settings reset to default!</string>
    <string name="user_agent_updated">User-Agent updated!</string>
    <string name="javascript_updated">JavaScript setting updated!</string>

    <!-- Crash -->
    <string name="crash_title">Lite++ Crashed</string>
    <string name="no_crash_info">No crash information available.</string>
</resources>
