<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:title="@string/pref_category_general">

        <ListPreference
            android:key="pref_theme"
            android:title="@string/pref_theme"
            android:summary="@string/pref_theme_summary"
            android:entries="@array/theme_entries"
            android:entryValues="@array/theme_values"
            android:defaultValue="system"
            app:icon="@drawable/ic_theme" />

        <EditTextPreference
            android:key="pref_custom_user_agent"
            android:title="@string/pref_custom_user_agent"
            android:summary="@string/pref_custom_user_agent_summary"
            android:dialogTitle="@string/pref_dialog_title_user_agent"
            android:defaultValue=""
            android:inputType="text"
            app:icon="@drawable/ic_user_agent" />

        <SwitchPreferenceCompat
            android:key="pref_javascript"
            android:title="@string/pref_javascript"
            android:summary="@string/pref_javascript_summary"
            android:defaultValue="true"
            app:icon="@drawable/ic_javascript" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_category_storage">

        <Preference
            android:key="pref_cache"
            android:title="@string/pref_clear_cache"
            android:summary="@string/pref_clear_cache_summary"
            app:icon="@drawable/ic_cache" />

        <Preference
            android:key="pref_data"
            android:title="@string/pref_clear_storage"
            android:summary="@string/pref_clear_storage_summary"
            app:icon="@drawable/ic_storage" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_category_advanced">

        <Preference
            android:key="pref_reset"
            android:title="@string/pref_reset"
            android:summary="@string/pref_reset_summary"
            app:icon="@drawable/ic_reset" />
    </PreferenceCategory>

</PreferenceScreen>
