<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/preference_title_developer">

        <PreferenceScreen
            android:title="@string/dev_name"
            android:key="Key_dev_name"
            android:summary="Creator and Developer of Lite++"
            app:icon="@drawable/baseline_logo_dev_24" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/preference_title_about_app">

        <PreferenceScreen
            android:title="@string/preference_title_version"
            android:key="Key_version"
            android:summary="@string/current_version"
            app:icon="@drawable/ic_version" />

        <PreferenceScreen
            android:title="@string/preference_title_app_status"
            android:key="Key_status"
            android:summary="@string/app_status"
            app:icon="@drawable/ic_status" />

        <PreferenceScreen
            android:title="@string/preference_title_bugs_features"
            android:key="Key_feature"
            android:summary="@string/bugs_and_features"
            app:icon="@drawable/baseline_bug_report_24" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/preference_title_contact">

        <PreferenceScreen
            android:title="@string/preference_title_facebook"
            android:key="Key_facebook"
            android:summary="Contact me on Facebook"
            app:icon="@drawable/ic_facebook">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/dev_fb" />
        </PreferenceScreen>

        <PreferenceScreen
            android:title="@string/preference_title_github"
            android:key="Key_github"
            android:summary="Star on GitHub"
            app:icon="@drawable/ic_github">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/dev_github" />
        </PreferenceScreen>

        <PreferenceScreen
            android:title="@string/preference_title_youtube"
            android:key="Key_yt"
            android:summary="Subscribe to my channel"
            app:icon="@drawable/ic_youtube">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/dev_yt" />
        </PreferenceScreen>

        <PreferenceScreen
            android:title="Email"
            android:key="Key_email"
            android:summary="@string/dev_email"
            app:icon="@drawable/baseline_email_24" />
    </PreferenceCategory>

</androidx.preference.PreferenceScreen>
